# Flight-Booking-Agentic-System

./: .env  README.md  app.py  main.py  pyproject.toml
backend/: app.py
backend/agent/: agent.py
backend/nodes/: research.py  route.py
backend/prompts/: __init__.py
constants/: agent_constant.py
mcp/: README.md  __init__.py  api.py  constants.py  examples_booking.py  prompts.py  requirements.txt
mcp/tools/: __init__.py  booking.py  search.py
mcp/utils/: exception.py  logger.py
templates/: index.html
utils/: logger.py
utils.py/: logger.py
